--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
 POSTGRES_USER=simple_crud
 POSTGRES_PASSWORD=password
 POSTGRES_DB=crud_database
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
+ENVIRONMENT=production
