--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,24 @@
 version: '3.8'
 
 services:
+
+  mu-service:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: mu-service
+    ports:
+      - "8086:8086"
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USER: ${POSTGRES_USER}
+      DATABASE_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_HOST: ${POSTGRES_HOST}
+      POSTGRES_PORT: ${POSTGRES_PORT}
+      ENVIRONMENT: ${ENVIRONMENT}
+
   postgres:
     image: postgres:latest
     container_name: HSBC_DB_CONTAINER
